--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -42,13 +42,13 @@
       <div class="govuk-grid-column-full educational-copy-container">
         <h1 class="govuk-heading-m govuk-\!-static-margin-0 educational-copy-container__heading-m">What the NCEA is</h1>
         <p class="govuk-body">
-          The Department for Environment, Food and Rural Affairs’ (Defra)
+          The Department for Environment, Food and Rural Affairs’ (Defra's)
           <a href="https://www.gov.uk/government/publications/natural-capital-and-ecosystem-assessment-programme" target="_blank">
           Natural Capital and Ecosystem Assessment (NCEA)</a>
-          programme is delivering a nationwide survey of England’s land, coast, and sea by mapping the location, extent and
+          programme is delivering a nationwide survey of England’s land, coast, and sea: mapping the location, extent and
           condition of our ecosystems and the benefits they provide. Through comprehensive monitoring, innovative measurement and
           the development of tools and guidance, NCEA is providing insights on how and why our environment is changing and the
-          impact of this, so that we can make informed decisions to better protect and manage our natural capital for people and
+          impact of this - so that we can make informed decisions to better protect and manage our natural capital for people and
           the planet.
         </p>
         <h1 class="govuk-heading-m govuk-\!-static-margin-0 educational-copy-container__heading-m">What natural capital is</h1>
