--- a/src/views/partials/results_count/template.njk
+++ b/src/views/partials/results_count/template.njk
@@ -1,10 +1,17 @@
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    {% if count > 0 %}
-      <div class="count-block">
-        <a href="{{resultsPath}}" class="govuk-link count-block-link">Click to see {{count}} results from previous selection</a>
-      </div>
-      <div class="govuk-section-break--visible"></div>
-    {% endif %}
-  </div>
+{# temporary fix until we find some solution for elastci search for more than 10,000 records #}
+
+<div class="govuk-grid-column-full">
+<div class="count-block">
+   {% if count>0 %}
+     {% if count > 10000 %}
+<a href="{{ resultsPath }}" class="govuk-link count-block-link">
+         Click to see 10000 results from previous selection
+</a>
+     {% else %}
+<a href="{{ resultsPath }}" class="govuk-link count-block-link">
+         Click to see {{ count }} results from previous selection
+</a>
+     {% endif %}
+   {% endif %}
+</div>
 </div>
