--- a/src/views/screens/guided_search/classifier_selection.njk
+++ b/src/views/screens/guided_search/classifier_selection.njk
@@ -14,7 +14,10 @@
     items: [
       {
         text: "Home",
-        href: routes.homePage
+        href: routes.homePage,
+         attributes: {
+        'data-do-storage-reset': ''
+      }
       },
       {
         text: "Questionnaire search"
