--- a/src/assets/sass/components/_modal.scss
+++ b/src/assets/sass/components/_modal.scss
@@ -28,6 +28,17 @@
   max-height: 65%;
 }
 
+.skip-questionnaire-modal {
+  z-index: 1002;
+  background-color: #505a5f;
+  padding: 40px 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  max-height: 65%;
+}
+
 .map-modal {
   background-color: govuk-colour("white");
   box-sizing: border-box;
