--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7666,6 +7666,14 @@
   margin-bottom: 14px;
 }
 
+.privacy_policy_last_updated {
+  color: #505a5f;
+  font-weight: 300;
+  line-height: 30px;
+  font-size: 1.5rem;
+  font-family: "GDS Transport", arial, sans-serif;
+}
+
 .educational-copy-container {
   margin-bottom: 40px;
 }
